test/compile_errors/err_channel_rc_element_not_send.w
//! expect-error: channel element type must be Send

use std.rc

fn main:
    let (_tx, _rx) = chan[Rc[i32]](1)
